POD for --sub-fileset edited.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@235 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.152  2006/07/21 07:02:39  zeus
+POD for --sub-fileset edited.
+
 Revision 1.151  2006/07/20 06:26:50  zeus
 --sub-fileset <FILE> option is implemented.
 
@@ -602,4 +605,3 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
-
