--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.153  2006/08/03 10:09:55  zeus
+Tag RenRotFileNameOriginal writing was added.
+
 Revision 1.152  2006/07/21 07:02:39  zeus
 POD for --sub-fileset edited.
 
@@ -605,3 +608,4 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
+
