now win32 platform is considered in parseConfig(), the variable USERPROFILE instead of HOME.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@238 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 $Log$
+Revision 1.155  2006/08/03 20:27:33  zeus
+now win32 platform is considered in parseConfig(), the variable USERPROFILE
+instead of HOME.
+
 Revision 1.154  2006/08/03 10:26:25  zeus
 Template sequence "%o" was added.
 
@@ -611,3 +615,4 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
+
