colorization for output implemented, the option --test-use-color
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@241 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.158  2006/08/08 11:15:27  zeus
+colorization for output implemented, the option --test-use-color
+
 Revision 1.157  2006/08/08 08:41:31  zeus
 Template sequence "%O" was added.
 
@@ -621,4 +624,3 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
-
