--include-file option implementation task written to TODO file.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@243 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.160  2006/08/10 09:28:50  zeus
+--include-file option implementation task written to TODO file.
+
 Revision 1.159  2006/08/09 07:29:31  zeus
 original file name counter template sequence moved to the "%C" and the
 base part of the original file name to "%O".
@@ -629,4 +632,3 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
-
