TODO edited concerning the help.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@257 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/TODO
+++ b/TODO
@@ -45,6 +45,9 @@ User interface
 -  GUI on PerlTk (due to WinCE hasn't real console) with some additional
    functions such as keywordizer
 
+-  to implement help output by topics (sole -h outputs list of topics like
+   rename,rotate,keyword e.t.c. and -h keyword outputs help for keyword related
+
 
 File naming
 
