--- a/TODO
+++ b/TODO
@@ -7,6 +7,13 @@ TODO SEMANTICS
 q	optional feature
 
 
+BUGS
+
+-  fix cleaning EXIFs when --no-backup is given
+
+-  make possible to use same EXIF tags in different groups
+
+
 EXIF tags
 
 q  to write to some tag the options passed to renrot
