--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.165  2006/09/09 19:14:51  zeus
+Processing message look tunned, now it shows (m of n) file processed.
+
 Revision 1.164  2006/09/05 05:41:11  andy
 Move main() to the end of file. Refactoring: configOptions -> cfgOpts.
 
@@ -644,3 +647,4 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
+
