--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.166  2006/09/09 20:23:43  zeus
+Now "use color = Yes" is default.
+
 Revision 1.165  2006/09/09 19:14:51  zeus
 Processing message look tunned, now it shows (m of n) file processed.
 
@@ -647,4 +650,3 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
-
