--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.170  2006/10/09 15:16:46  andy
+Get file list from file (--sub-fileset).
+
 Revision 1.169  2006/10/09 12:35:16  andy
 Modify TODO according to conference.osdn.org.ua 2006 visitor wishes.
 
@@ -659,4 +662,3 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
-
