--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.171  2006/10/12 09:53:35  zeus
+TODO edited on account of plugins.
+
 Revision 1.170  2006/10/09 15:16:46  andy
 Get file list from file (--sub-fileset).
 
@@ -662,3 +665,4 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
+
