Spelling fix: http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=402702
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@278 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/README
+++ b/README
@@ -22,7 +22,7 @@ manual.
 
 RenRot rotates file and its thumbnail, according to EXIF tag Orientation. If
 the tag is absent or miss set, than the script allows to rotate the file as
-well as it's thumbnail "by hands".
+well as its thumbnail "by hands".
 
 Furthermore, the script put a comment to:
     - Comment tag from comment file;
