RenRotFileNameOriginal tag related bug report added to TODO.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@280 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/TODO
+++ b/TODO
@@ -9,6 +9,9 @@ q	optional feature
 
 BUGS
 
+-  fix cleaning RenRotFileNameOriginal while rotating file, previously renroted 
+   (reported by Alex Zasypkin)
+
 -  fix cleaning EXIFs when --no-backup is given
 
 -  make possible to use same EXIF tags in different groups
