--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.173  2006/12/24 09:21:02  zeus
+RenRotFileNameOriginal tag related bug report added to TODO.
+
 Revision 1.172  2006/10/29 17:03:08  andy
 Changing/fixing/adding URLs across README.
 
@@ -668,3 +671,4 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
+
