--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 $Log$
+Revision 1.174  2006/12/24 11:54:26  zeus
+RenRotFileNameOriginal cleanin bug fixed. The tag writing moved from
+renameFile() to renRotProcess().
+
 Revision 1.173  2006/12/24 09:21:02  zeus
 RenRotFileNameOriginal tag related bug report added to TODO.
 
@@ -671,4 +675,3 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
-
