Split our tag writting to separate function.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@282 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/TODO
+++ b/TODO
@@ -9,10 +9,10 @@ q	optional feature
 
 BUGS
 
--  fix cleaning RenRotFileNameOriginal while rotating file, previously renroted 
+-  fix cleaning RenRotFileNameOriginal while rotating file, previously renroted
    (reported by Alex Zasypkin)
 
--  fix cleaning EXIFs when --no-backup is given
++  fix cleaning EXIFs when --no-backup is given
 
 -  make possible to use same EXIF tags in different groups
 
@@ -32,7 +32,7 @@ PLUGINS
 -  print some text on image (i.e. date and timestamp) [guess perl-GD will be
    optional requrement]
 
--  speceffects (thumbnail layering over the image e.t.c.)
+-  special effects (thumbnail layering over the image e.t.c.)
 
 -  jpgfromraw
 
