--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.175  2007/01/13 16:01:46  andy
+Split our tag writting to separate function.
+
 Revision 1.174  2006/12/24 11:54:26  zeus
 RenRotFileNameOriginal cleanin bug fixed. The tag writing moved from
 renameFile() to renRotProcess().
@@ -675,3 +678,4 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
+
