--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 $Log$
+Revision 1.179  2007/07/06 19:59:55  zeus
+version changed.
+
 Revision 1.178  2007/07/04 20:05:41  zeus
 check for availability of Image::Magick was added.
 EXIF writing to the montage files was added.
@@ -692,3 +695,4 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
+
