--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 $Log$
+Revision 1.180  2007/07/22 09:56:38  zeus
+written own contact sheet files numeration engine, instead of ImageMagick
+native engine.
+
 Revision 1.179  2007/07/06 19:59:55  zeus
 version changed.
 
@@ -695,4 +699,3 @@ Id keyword is added to renrot file.
 
 Revision 1.1  2005/10/17 13:39:38  zeus
 ChangeLog file is added. Its the very begining.
-
