renrot: fix help summary and manual style, fix English, replace initial bang sequence with PERL_BINARY macro.
mv renrot renrot.pl

Makefile.PL: Add rules to generate renrot from renrot.pl,
so that the interpreter is set to the correct value.

MANIFEST: row with "renrot" changed to work with changed 
Makefile.PL 


git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@300 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/README
+++ b/README
@@ -214,6 +214,7 @@ Fedora Extras Team for including RenRot to its repository.
 
 Vyacheslav Garonin for his idea concerning the virtual aggregation.
 
+Sergey Poznyakoff for help summary and manual style, English and code fixes.
 
 ARE YOU WANT SOMETHING TO SAY?
 --- --- ---- --------- -- ----
