README edited. Amendment to the License Agreement: Effective 2007.09.01 only License Artistic 2.0 remains valid, all other Licenses are withdrawn.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@308 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/README
+++ b/README
@@ -182,7 +182,8 @@ except:
 LICENSING
 ---------
 
-RenRot is an Open Source project distributed under GPL or Artistic license.
+RenRot is an Open Source project distributed under Artistic 2.0 license
+You can find it here http://www.perlfoundation.org/artistic_license_2_0
 
 THIS SOFTWARE IS PROVIDED BY THE AUTHOR AND CONTRIBUTORS ``AS IS'' AND ANY
 EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
