minor code indentation. README edited.
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@342 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/README
+++ b/README
@@ -217,6 +217,8 @@ Vyacheslav Garonin for his idea concerning the virtual aggregation.
 
 Sergey Poznyakoff for help summary and manual style, English and code fixes.
 
+Anthony Thyssen for his help with ImageMagick/PerlMagick related questions.
+
 ARE YOU WANT SOMETHING TO SAY?
 --- --- ---- --------- -- ----
 
