Fix NEWS. Append thanks to Debian
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@509 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/README
+++ b/README
@@ -229,6 +229,8 @@ Alex Zasypkin for his help with documentation writing.
 
 Fedora Extras Team for including RenRot to its repository.
 
+Debian maintainers team for including RenRot to the pool.
+
 Vyacheslav Garonin for his idea concerning the virtual aggregation.
 
 Sergey Poznyakoff for help summary and manual style, English and code fixes.
