--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,10 @@
 * 1.0 *
 
-Major upgrade was done. The contact sheet generator has been implemented. This
-new feature requires Image::Magick perl module at run-time. In addition to
-contact sheet generator framework the rank functionality has been added. See
-the applied manual to get details for using it. The configuration parameter
-"use color" turned off by default.
+A major upgrade was done. The contact sheet generator has been implemented.
+This new feature requires the Image::Magick Perl module at run-time. In
+addition to the contact sheet generator framework, the rank functionality has
+been added. See the applied manual to get details for using it. The
+configuration parameter "use color" is turned off by default.
 
 
 * 0.25 *
