--- a/TODO
+++ b/TODO
@@ -9,11 +9,6 @@ q	optional feature
 
 BUGS
 
-+  fix cleaning RenRotFileNameOriginal while rotating file, previously renroted
-   (reported by Alex Zasypkin)
-
-+  fix cleaning EXIFs when --no-backup is given
-
 -  make possible to use same EXIF tags in different groups
 
 
@@ -72,6 +67,8 @@ Performance
    maximum lenght and compare it with 1/3 of free space or 1/2 if --no-backup is
    defined)
 
+-  Use convert instead of jpegtran or vice versa (optional)
+
 
 User interface
 
@@ -99,6 +96,8 @@ Code
 +- to review the code to optimize it where it's possible.
 
 +-  to tune style look of comments, code, e.t.c.
+
+-  Find way to update ChangeLog in automatic manner
 
 
 Other
