Append jabber contacts to the AUTHOR file
git-svn-id: svn+ssh://svn.gnu.org.ua/renrot/trunk@543 fe2816f4-e837-0410-b10a-f608c9d244a1

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,7 @@
 Zeus Panchenko <zeusATdnDOTfarlepDOTnet>
+Jabber: zeusATgnuDOTorgDOTua
 ICQ:198888060
 
 Andy Shevchenko <andyATsmileDOTorgDOTua>
+Jabber: andyDOTshevchenkoATgmailDOTcom
 ICQ:131403690
